{
    "name": "InputActions",
    "maps": [
        {
            "name": "LeftHand",
            "id": "fea84969-e78f-4458-825c-14ba1eb42fad",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "efaff9cb-d7ae-44eb-81d2-3cc44480050a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "f83dad8c-c090-4e1d-8e42-884e7c400f57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e598ab2-0557-4439-a57d-b59e853c33ee",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d11ebab-bfd9-41d3-9a8b-def59399e8ba",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightHand",
            "id": "94f0a232-fb0b-42b1-a53c-df06e5a155f6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "70d3b6be-91ad-4559-8712-d0e74914b79f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a0946861-6b64-4280-ac34-7b17de000439",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}